[gd_scene load_steps=15 format=3 uid="uid://c5ejbktfgh1tv"]

[ext_resource type="Script" uid="uid://bykxunhsi6yv1" path="res://scenes/bonnie.gd" id="1_8waqq"]
[ext_resource type="Shader" uid="uid://8ecfbgdsl7km" path="res://scenes/eyes.gdshader" id="2_12ssv"]
[ext_resource type="Texture2D" uid="uid://p30bdndxgdfa" path="res://assets/camera/cam1bonnie.png" id="3_gbf1v"]
[ext_resource type="Texture2D" uid="uid://n68ck3idqmor" path="res://assets/camera/cam5bonnie.png" id="4_a1t63"]
[ext_resource type="Texture2D" uid="uid://bsc1ouc7o16n1" path="res://assets/camera/cam3bonnie.png" id="5_govm8"]
[ext_resource type="Texture2D" uid="uid://cj0rrrelw8hg7" path="res://assets/camera/cam9bonnie.png" id="6_2wnj6"]
[ext_resource type="Texture2D" uid="uid://ctpu0xidc5eja" path="res://assets/camera/load/load4.png" id="6_fktvu"]
[ext_resource type="Script" uid="uid://dl5fgio2ul8pn" path="res://scenes/mixed_bag.gd" id="7_mbbyy"]
[ext_resource type="Texture2D" uid="uid://b2rav0oqf64vr" path="res://assets/camera/cam1bonnieeyes.png" id="8_5jsej"]
[ext_resource type="Texture2D" uid="uid://b5gxcaj3vskvs" path="res://assets/camera/cam5bonnieeyes.png" id="9_o6j0o"]
[ext_resource type="AudioStream" uid="uid://tc03uc5wmmr3" path="res://assets/sounds/bonnie/metalwalk1.mp3" id="11_ej3aa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f020u"]
shader = ExtResource("2_12ssv")
shader_parameter/scroll = 0.0
shader_parameter/colour = Vector4(1, 1, 1, 1)
shader_parameter/displacement_scale = 2.0

[sub_resource type="SpriteFrames" id="SpriteFrames_4bjj5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_gbf1v")
}],
"loop": false,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_fktvu")
}],
"loop": false,
"name": &"10",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_fktvu")
}],
"loop": true,
"name": &"11",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_fktvu")
}],
"loop": false,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_a1t63")
}],
"loop": false,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_govm8")
}],
"loop": false,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_fktvu")
}],
"loop": false,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_fktvu")
}],
"loop": false,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_fktvu")
}],
"loop": false,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_2wnj6")
}],
"loop": false,
"name": &"8",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_fktvu")
}],
"loop": false,
"name": &"9",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_rptry"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_5jsej")
}],
"loop": false,
"name": &"1",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"10",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_fktvu")
}],
"loop": true,
"name": &"11",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_o6j0o")
}],
"loop": false,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_govm8")
}],
"loop": false,
"name": &"4",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"5",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_fktvu")
}],
"loop": false,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_fktvu")
}],
"loop": false,
"name": &"8",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"9",
"speed": 5.0
}]

[node name="Bonnie" type="Node2D" node_paths=PackedStringArray("Sprites")]
script = ExtResource("1_8waqq")
Sprites = NodePath("Sprites")

[node name="Sprites" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_f020u")
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_4bjj5")
animation = &"1"
centered = false
offset = Vector2(-48, 0)

[node name="SpritesEyes" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
material = SubResource("ShaderMaterial_f020u")
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_rptry")
animation = &"1"
centered = false
offset = Vector2(-48, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="MixedBag" type="Node" parent="."]
script = ExtResource("7_mbbyy")
Size = 25
RefillWhenEmpty = true

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ej3aa")
volume_db = 1.0

[node name="LowLureBag" type="Node" parent="."]
script = ExtResource("7_mbbyy")
Size = 2
InitialBag = [true, false]
RefillWhenEmpty = true

[node name="MainHallFailBag" type="Node" parent="."]
script = ExtResource("7_mbbyy")
Size = 4
InitialBag = [1, 3, 4, 7]
RefillWhenEmpty = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
